# polymarket_5_min_trader

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
src/polymarket_5_min_trader/: __init__.py  backtest.py  cli.py  clob.py  config.py  gamma.py  history.py  models.py  relayer.py  state.py  strategy.py
src/polymarket_5_min_trader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_backtest.py  test_cli.py  test_clob.py  test_gamma.py  test_state.py  test_strategy.py
